--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <script async src="https://web.telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="root"></div>
