--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Cye Binary Business</title>
+    <title>Earn from online tasks</title>
 
     <base href="/" />
 
